# LogPhotos_Proyecto_Final

./: .env  README.md  app.py  dashboard.html  login.html  main.py  pyproject.toml  recuperacion.html  registro.html  reseteo.html  style.css
Uploads o foto/: descarga_6.jpg.url  jared3.jpeg.url  jared6.jpeg.url
