[project]
name = "trevi3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-wtf>=1.3.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
]
